# rust_projects

./: .gitignore  Cargo.toml  README.md
async_chat_server/: Cargo.toml  README.md  todo.md
async_chat_server/src/: lib.rs  main.rs
async_prog/: Cargo.toml  README.md
async_prog/src/: main.rs
async_web_crawler/: Cargo.toml  README.md
async_web_crawler/src/: lib.rs  main.rs
chip8_emulation/: Cargo.toml
chip8_emulation/src/: main.rs
flappy_xo9a8/: Cargo.toml
image_editor/: index.html  script.js  style.css  worker.js
little_problems/nyt_api/: Cargo.toml
little_problems/nyt_api/src/: main.rs
little_problems/riseIn_task1/src/: main.rs
little_problems/riseIn_task3/: Cargo.toml
little_problems/riseIn_task3/src/: main.rs
partical_madness/: readme.md
partical_madness/src/: main.rs
party_perticipants_screener/src/: lib.rs
practise/pointers/src/: lib.rs
riseIn_task1/: Cargo.toml
riseIn_task2/: Cargo.toml
riseIn_task2/src/: main.rs
src/: main.rs
url_shortner/: .env.example  Cargo.toml  README.md
url_shortner/src/: db.rs  handlers.rs  main.rs  models.rs
