[workspace]
members = [
  "chip8_emulation",
  "flappy_xo9a8",
  "guessing_game",
  "little_problems/nyt_api",
  "partical_madness",
  "party_perticipants_screener",
  "little_problems/riseIn_task1",
  "little_problems/riseIn_task2",
  "little_problems/riseIn_task3"
, "practise/pointers", "async_prog", "async_chat_server"]
resolver = "2"
